@@ -565,6 +565,21 @@ chinstdir     =
 uninstall     = {8C8C2500-3756-4CFF-8CAD-E840A36AAB84}
 uninstparam   = /passive /norestart
 
+;[Ant]
+
+;category      = Development
+;describe      = Java-based Build Tool
+;website       = http://ant.apache.org/
+;scrape        = http://ant.apache.org/bindownload.cgi
+;version       = apache-ant-([0-9]\.[0-9]\.[0-9])-bin.zip
+;download      = http://apache.forbigweb.com/ant/binaries/
+;filename      = apache-ant-#VERSION#-bin.zip
+;instparam     = 
+;upgrades      = false
+;chinstdir     = 
+;uninstall     = 
+;uninstparam   = 
+
 [InnoSetup]
 
 category      = Development
@@ -589,6 +604,7 @@ uninstparam   = /sp- /silent /norestart
 ;version       = mysql-([0-9]\.[0-9]\.[0-9]+)-win32.zip
 ;download      = http://mirrors.24-7-solutions.net/pub/mysql/Downloads/MySQL-#MAJORMINOR_VERSION#/
 ;filename      = mysql-#VERSION#-win32.zip
+;installer     = Setup.exe
 ;instparam     = 
 ;upgrades      = false
 ;chinstdir     = 
